# delta-radix

./: .gitignore  Cargo.toml  README.md
.github/workflows/: web-sim.yml
cad/: case.scad
cad/keycaps/: keycap_base.txt  keypad.scad
delta-radix-hal/: Cargo.toml
delta-radix-hal-pico/: Cargo.toml  build.rs
delta-radix-hal-pico/src/: executor.rs  hal.rs  main.rs  panic.rs
delta-radix-hal-pico/src/hal/: async_keypad.rs  display.rs  keypad.rs  mod.rs  time.rs
delta-radix-hal-sim/: Cargo.toml
delta-radix-hal-sim/src/: hal.rs  main.rs
delta-radix-hal-web/: Cargo.toml  index.html
delta-radix-hal-web/src/: hal.rs  lib.rs  main.rs
delta-radix-hal/src/: display.rs  keypad.rs  lib.rs  time.rs
delta-radix-os/: Cargo.toml
delta-radix-os/src/: lib.rs  menu.rs
delta-radix-os/src/calc/: eval.rs  glyph.rs  mod.rs  num.rs  parse.rs
delta-radix-os/src/calc/backend/: eval.rs  parse.rs
delta-radix-os/src/calc/frontend/: draw.rs  input.rs  mod.rs
delta-radix-os/tests/: calc.rs  hal.rs  keys.rs
flex-int/: Cargo.toml
flex-int/src/: binary_op.rs  from_string.rs  lib.rs  op.rs  to_string.rs
flex-int/tests/: fuzz.rs
hardware/rev1/delta_radix_rev1/: TXB0108PW.kicad_sym  delta_radix_rev1.kicad_pcb  delta_radix_rev1.kicad_pro  delta_radix_rev1.kicad_sch  fp-lib-table  sym-lib-table
hardware/rev1/delta_radix_rev1/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
hardware/rev1/delta_radix_rev1/delta_radix_rev1.pretty/: LCD-20x4.kicad_mod
